hotfix - ruby go #1

--- a/_posts/2022-04-22-ruby-go#1.md
+++ b/_posts/2022-04-22-ruby-go#1.md
@@ -70,14 +70,14 @@ func main() {
 	fmt.Printf("Malika Name: %d\n", malika.age)
 
 	john := Person{name: "John", age: 29}
-	fmt.Printf("Malika Name: %s\n", john.name)
-	fmt.Printf("Malika Name: %d\n", john.age)
+	fmt.Printf("John Name: %s\n", john.name)
+	fmt.Printf("John Name: %d\n", john.age)
 
     //Output 
-	//Malika Name: Malika
-	//Malika Name: 22
-	//Malika Name: John
-	//Malika Name: 29
+	//John Name: John
+	//John Name: 22
+	//John Name: John
+	//John Name: 29
 }
 ```
 Kurang lebih perbedaanya seperitu itu ya :)))
